# camelsafr

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
camelsafr/: __init__.py  _io.py  _urls.py  _xarray.py
docs/: api-reference.md  index.md  quickstart.md  user-guide.md
tests/: conftest.py  test_attrs.py  test_cache.py  test_io.py  test_timeseries.py  test_urls.py
